# devkit-plugin

./: .gitignore  .markdownlint.json  .markdownlintignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  ruff.toml
.claude/: settings.json
.claude-plugin/: plugin.json
.claude/.devkit/: config.json  config.jsonc  config.schema.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: claude-code-review.yml  claude.yml  release.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  PLUGIN.md
skills/dk/: SKILL.md
src/arch/: __init__.py  analyze.py  check.py  consistency.py  discovery.py  docs.py  rules.py  visualize.py
src/core/: __init__.py  errors.py  jsonc.py  layer_guard.py  ports.py  types.py
src/events/: __init__.py  arch_guard.py  enter_plan.py  format.py  plan.py  plan_guard.py  postcommit.py  prompt_submit.py  session.py  stop.py  validate.py
src/lib/: __init__.py  axiom.py  config.py  docs.py  git.py  github.py  hooks.py  jsonc.py  logger.py  logging.py  (+9 more)
templates/: CLAUDE.md.template
tests/: conftest.py  test_analyze.py  test_axiom.py  test_check.py  test_config.py  test_consistency.py  test_discovery.py  test_docs.py  test_git.py  test_github.py  test_hooks.py  test_jsonc.py  test_layer_guard.py  test_logger.py  test_logging.py  test_marketplace.py  test_mcp.py  test_plan_guard.py  test_postcommit.py  test_rules.py  test_serv.py  test_setup.py  test_sync.py  test_tools.py  test_validate.py  test_vercel.py  test_version.py  test_visualize.py  test_webhooks.py
(+38 files in other folders)
