[project]
name = "devkit-plugin"
version = "0.46.0"
description = "Claude Code Plugin for automatic code standards"
requires-python = ">=3.10"

[dependency-groups]
dev = [ "ruff>=0.8.0", "pytest>=8.0.0", "pytest-mock>=3.14.0", "pytest-subtests>=0.14.0", "bandit>=1.7.0",]

[project.optional-dependencies]
dev = [ "ruff>=0.8.0", "pytest>=8.0.0", "pytest-mock>=3.14.0",]

[tool.pytest.ini_options]
testpaths = [ "tests",]
python_files = [ "test_*.py",]
addopts = "-v --tb=short"
markers = [ "integration: marks tests as integration tests (deselect with '-m \"not integration\"')", "slow: marks tests as slow (deselect with '-m \"not slow\"')",]
filterwarnings = [ "ignore::DeprecationWarning",]

[tool.coverage.run]
source = [ "src",]
branch = true
omit = [ "tests/*", "*/__init__.py",]

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError",]
fail_under = 70
